--- a/cluster/apps/home/vaultwarden/helm-release.yaml
+++ b/cluster/apps/home/vaultwarden/helm-release.yaml
@@ -16,6 +16,9 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
+  valuesFrom:
+    - kind: Secret
+      name: vaultwarden-helm-secrets
   values:
     image:
       repository: vaultwarden/server
