--- a/cluster/apps/home/vaultwarden/helm-release.yaml
+++ b/cluster/apps/home/vaultwarden/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
   values:
     image:
       repository: vaultwarden/server
-      tag: 1.23.0-alpine
+      tag: 1.24.0
     env:
       TZ: ${TZ}
       DATA_FOLDER: config
