--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       version: 4.2.1
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
   # See https://github.com/k8s-at-home/charts/blob/master/charts/stable/baikal/values.yaml
