update sec group

--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
     image:
       repository: ckulka/baikal
       tag: 0.8.0
+    podSecurityContext:
+      fsGroup: ${FS_GROUP}
     env:
       TZ: ${TZ}
     persistence:
