--- a/cluster/apps/networking/traefik/config-map.yaml
+++ b/cluster/apps/networking/traefik/config-map.yaml
@@ -15,7 +15,7 @@ data:
             rewritebody:
               rewrites:
                 - regex: </head>
-                  replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/{{ $app }}/{{ $theme }}.css"></head>
+                  replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"></head>
 
         # Wrap CSS and theme headers in single middleware for ease of use
         {{ $app }}-theme:
@@ -32,7 +32,7 @@ data:
             rewritebody:
               rewrites:
                 - regex: </head>
-                  replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/base/{{ $app }}/{{ $theme }}.css"><link rel="stylesheet" type="text/css" href="https://theme-park.dev/css/addons/{{ $app }}/{{ $app }}-4k-logo/{{ $app }}-4k-logo.css"></head>
+                  replacement: <link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/base/{{ $app }}/{{ $theme }}.css"><link rel="stylesheet" type="text/css" href="https://theme-park.${CLUSTER_DOMAIN}/css/addons/{{ $app }}/{{ $app }}-4k-logo/{{ $app }}-4k-logo.css"></head>
 
         # Wrap CSS and theme headers in single middleware for ease of use
         {{ $app }}-4k-theme:
