--- a/cluster/apps/home/theme-park/helm-release.yaml
+++ b/cluster/apps/home/theme-park/helm-release.yaml
@@ -7,6 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: theme-park
       version: 1.1.1
       sourceRef:
