fix(ansible): add rbd module back in
This was not working on raspi devices because without the linux-modules-extra-raspi package it would fail.

--- a/provision/ansible/roles/ubuntu/tasks/kernel.yml
+++ b/provision/ansible/roles/ubuntu/tasks/kernel.yml
@@ -6,6 +6,7 @@
   loop:
     - br_netfilter
     - overlay
+    - rbd
 
 - name: Enable kernel modules on boot
   ansible.builtin.copy:
@@ -15,3 +16,4 @@
   loop:
     - br_netfilter
     - overlay
+    - rbd
