--- a/cluster/apps/home/homer/kustomization.yaml
+++ b/cluster/apps/home/homer/kustomization.yaml
@@ -3,3 +3,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
+
+configMapGenerator:
+  - name: homer-config
+    files:
+      - config.yaml
+
+configurations:
+  - kustomizeconfig.yaml
