add homer pages

--- a/cluster/apps/home/homer/helm-release.yaml
+++ b/cluster/apps/home/homer/helm-release.yaml
@@ -55,8 +55,7 @@ spec:
         enabled: true
         type: configMap
         name: homer-config
-        mountPath: /www/assets/config.yml
-        subPath: config.yaml
+        mountPath: /www/assets/
       data:
         enabled: true
         type: nfs
