--- a/cluster/apps/networking/traefik/kustomization.yaml
+++ b/cluster/apps/networking/traefik/kustomization.yaml
@@ -9,9 +9,9 @@ resources:
 configMapGenerator:
   - name: traefik-middleware
     files:
-      - middleware/headers.yaml
-      - middleware/theme-park.yaml
-      - middleware/theme-park-addons.yaml
+      - headers.yml=middleware/headers.yaml
+      - theme-park.yml=middleware/theme-park.yaml
+      - theme-park-addons.yml=middleware/theme-park-addons.yaml
 
 configurations:
   - kustomizeconfig.yaml
