--- a/cluster/apps/media/overseerr/helm-release.yaml
+++ b/cluster/apps/media/overseerr/helm-release.yaml
@@ -34,7 +34,8 @@ spec:
           external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
           external-dns/is-public: "true"
           kubernetes.io/ingress.class: traefik
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure,overseerr-theme@file
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: overseerr-theme@file
         hosts:
           - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
             paths:
