--- a/cluster/apps/home/home-assistant/helm-release.yaml
+++ b/cluster/apps/home/home-assistant/helm-release.yaml
@@ -29,6 +29,9 @@ spec:
     env:
       TZ: ${TZ}
 
+    podSecurityContext:
+      fsGroup: ${FS_GROUP}
+
     ingress:
       main:
         enabled: true
