--- a/cluster/apps/networking/traefik/middlewares/kustomization.yaml
+++ b/cluster/apps/networking/traefik/middlewares/kustomization.yaml
@@ -2,6 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-  - dashboard
-  - middlewares
+  - local-only-access.yaml
