--- a/cluster/apps/networking/traefik/kustomization.yaml
+++ b/cluster/apps/networking/traefik/kustomization.yaml
@@ -2,16 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - dashboard
+  - addons
   - helm-release.yaml
   - secret.sops.yaml
-
-configMapGenerator:
-  - name: traefik-middleware
-    files:
-      - headers.yml=middleware/headers.yaml
-      - theme-park.yml=middleware/theme-park.go.tmpl
-      - theme-park-addons.yml=middleware/theme-park-addons.go.tmpl
-
-configurations:
-  - kustomizeconfig.yaml
