--- a/cluster/apps/networking/traefik/addons/theme-park/kustomization.yaml
+++ b/cluster/apps/networking/traefik/addons/theme-park/kustomization.yaml
@@ -2,11 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - headers.yaml
+  - header-middleware.yaml
 
 configMapGenerator:
   - name: traefik-middleware
     files:
       # Create header middleware dynamically using traefik go templates, instead of many CRDs
       - theme-park.yml=theme-park.go.tmpl
-      - theme-park-addons.yml=theme-park-addons.go.tmpl
