add error-pages, middleware, make separate namespace for messaging svc

--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - kubernetes-dashboard.yaml
   - longhorn-system.yaml
   - media.yaml
+  - messaging.yaml
   - metallb-system.yaml
   - monitoring.yaml
   - networking.yaml
