--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -65,6 +65,7 @@ spec:
       - "--providers.kubernetesingress.ingressendpoint.ip=${METALLB_TRAEFIK_ADDR}"
       - "--providers.kubernetesingress.allowexternalnameservices=true"
       - "--providers.kubernetescrd.allowexternalnameservices=true"
+      # Add plugin/dynamic file provider for theme-park
       - "--experimental.plugins.rewritebody.modulename=github.com/packruler/rewrite-body"
       - "--experimental.plugins.rewritebody.version=v0.5.1"
       - "--providers.file.directory=/config"
