--- a/cluster/apps/home/paperless/helm-release.yaml
+++ b/cluster/apps/home/paperless/helm-release.yaml
@@ -56,6 +56,8 @@ spec:
       PAPERLESS_TIKA_ENDPOINT: http://{{ .Release.Name }}-tika:9998
       PAPERLESS_TIME_ZONE: ${TZ}
       PAPERLESS_URL: https://{{ .Release.Name }}.${CLUSTER_DOMAIN}
+      PAPERLESS_REDIS: redis://redis.messaging.cluster.local:6379
+      PAPERLESS_DBHOST: ${NAS_ADDR}
 
     persistence:
       data:
@@ -68,6 +70,9 @@ spec:
     podSecurityContext:
       fsGroup: ${FS_GROUP}
 
+    redis:
+      enabled: false
+
     additionalContainers:
       gotenburg:
         name: gotenburg
@@ -79,19 +84,7 @@ spec:
         image: apache/tika:2.4.0
         name: tika
         imagePullPolicy: Always
-    redis:
-      enabled: true
-      global:
-        storageClass: longhorn
-      image:
-        repository: bitnami/redis
-        tag: 6.2.6-debian-10-r169
-      architecture: "standalone"
-      auth:
-        enabled: false
-      master:
-        persistence:
-          enabled: false
+
     service:
       gotenburg:
         enabled: true
