--- a/cluster/apps/networking/traefik/kustomization.yaml
+++ b/cluster/apps/networking/traefik/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - addons
   - helm-release.yaml
   - secret.sops.yaml
-  - service-monitor
+  - service-monitor.yaml
 
 configurations:
   - kustomizeconfig.yaml
