--- a/cluster/apps/auth/authentik/kustomization.yaml
+++ b/cluster/apps/auth/authentik/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - dashboard
-  - middleware
-  - theme-park
+  - helm-release.yaml
+  - middlewareyaml
+  - secrets.sops.yaml
