--- a/cluster/apps/auth-system/kustomization.yaml
+++ b/cluster/apps/auth-system/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: auth
+namespace: auth-system
 resources:
   - authentik
