--- a/cluster/apps/auth-system/authentik/kustomization.yaml
+++ b/cluster/apps/auth-system/authentik/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - middlewareyaml
-  - secrets.sops.yaml
+  - middleware.yaml
+  - secret.sops.yaml
