--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -14,6 +14,7 @@ data:
   METALLB_VECTOR_AGGREGATOR_ADDR: 192.168.1.225
   METALLB_EMQX_ADDR: 192.168.1.226
   METALLB_PLEX_ADDR: 192.168.1.227
+  METALLB_POSTGRES_ADDR: 192.168.1.228
   NAS_ADDR: 192.168.1.128
   GATEWAY_IP: 192.168.1.1
   TZ: America/Vancouver
